--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,7 @@ swiftmailer:
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
-    user_class: SymfonyCebu\UserBundle\Entity\User
+    user_class: Bloodmatch\UserBundle\Entity\User
     from_email:
         address: "%mailer_user%"
         sender_name: "Symfony Cebu"
